deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner
spec:
  selector:
    matchLabels:
      app: scanner
  template:
    metadata:
      labels:
        app: scanner
    spec:
      containers:
      - name: myapp
        image: coderpews/jenkins-plugin-scanner-backend:latest
        resources:
          requests:
            memory: "60Mi"
            cpu: "128m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: coderpews/jenkins-plugin-scanner-front:latest
        resources:
          requests:
            memory: "60Mi"
            cpu: "128m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: scanner
spec:
  type: ClusterIP
  selector:
    app: scanner
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
    - "*"
  gateways:
    -  main-gateway
  http:
    - name: "api"
      match:
      - uri:
          prefix: "/api/multi/"
      rewrite:
        uri: "/multi"
      route:
      - destination:
          host: scanner
    - name: "frontend"
      match:
      - uri:
          prefix: "/"
      rewrite:
        uri: "/"
      route:
      - destination:
          host: front
